<resources>
    <string name="app_name">TourMate</string>
    <string name="fullName">Full Name</string>
    <string name="userName">User Name</string>
    <string name="userId">User Id</string>
    <string name="gender">Gender</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="passWord">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="eMail">E-Mail</string>
    <string name="mobileNo">Mobile No</string>
    <string name="area">Area</string>
    <string name="country">Country</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="editProfile">Edit</string>


    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
