<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="5dp"
        tools:context="com.example.r3l0ad3d.tourmate.LogInActivity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserNameSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passWord"/>
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:layout_gravity="center"
            android:onClick="homeActivity"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="If you have no account, Please "
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textStyle="bold"
                android:onClick="onClickSignUpActivity"/>
        </LinearLayout>
    </LinearLayout>
</layout>
